[package]
name = "hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hid_ext"
crate-type = ["cdylib"]

[dependencies]
hidapi = "2.4.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[profile.dev]
split-debuginfo = "packed"
