[package]
name = "hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hid_ext"
crate-type = ["cdylib"]

[dependencies]
hidapi = "2.4.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[patch."https://github.com/godot-rust/godot4-prebuilt".godot4-prebuilt]
git = "https://github.com//godot-rust/godot4-prebuilt"
branch = "4.1"

[profile.dev]
split-debuginfo = "packed"
